plugins {
  id 'application'
  id 'checkstyle'
  id 'jacoco'
  id 'pmd'
  id 'com.github.ben-manes.versions' version '0.51.0'
  id "info.solidsoft.pitest" version '1.19.0'
  id "io.freefair.lombok" version '9.2.0'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.owasp.dependencycheck' version '12.2.0'
  id 'org.sonarqube' version '7.2.3.7755'
  id 'org.springframework.boot' version '3.5.15'
  id 'org.flywaydb.flyway' version '9.22.3'
  id 'au.com.dius.pact' version '4.6.20'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'org.gradle.test-retry' version '1.6.4'
  id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

mainClassName = 'uk.gov.hmcts.reform.bailcaseapi.Application'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += [
    '-parameters',
    '-Xlint:unchecked',
    "-Werror"
  ]
}


tasks.withType(Test).configureEach {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }

  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/contractTest/java')
    }
    resources.srcDir file('src/contractTest/resources')
  }
}

processSmokeTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processFunctionalTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processContractTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

configurations {
  integrationTestImplementation.extendsFrom testImplementation
  integrationTestCompile.extendsFrom testCompile
  integrationTestRuntime.extendsFrom testRuntime
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestCompile.extendsFrom testCompile
  functionalTestRuntime.extendsFrom testRuntime
  contractTestImplementation.extendsFrom testImplementation
  contractTestCompile.extendsFrom testCompile
  contractTestRuntime.extendsFrom testRuntime
}

checkstyle {
  toolVersion = '13.4.2'
  configFile = new File(rootDir, 'config/checkstyle/checkstyle.xml')
  maxWarnings(0)
}

pmd {
  toolVersion = '7.25.0'
  ignoreFailures = true
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.functionalTest, sourceSets.smokeTest]
  reportsDir = file("./reports/pmd")
  ruleSets = [
    'category/java/bestpractices.xml'
  ]
}

tasks.register('integration', Test) {
  description = 'Runs the integration tests.'
  group = 'Verification'
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
}

tasks.register('functional', Test) {
  description = 'Runs the functional tests.'
  group = 'Verification'

  systemProperty "scenario", System.getProperty('scenario')

  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  finalizedBy aggregate
  testLogging {
    outputs.upToDateWhen { false }
    showStandardStreams = true
    showStackTraces = true
  }
}

tasks.register('smoke', Test) {
  description = 'Runs the smoke tests.'
  group = 'Verification'
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

tasks.register('contract', Test) {
  group = 'Verification'
  description = "Runs the consumer Pact tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

tasks.register('fortifyScan', JavaExec) {
  description = 'Run fortify scan.'
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

project.ext {
  pacticipant = 'bail_caseApi'
  pacticipantVersion = getCheckedOutGitCommitHash()
}

jacoco {
  toolVersion = "0.8.13"
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required.set(true)
    csv.required.set(false)
    xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
  }
}
pitest {
  //print('./gradlew --version'.execute().text.trim())
  junit5PluginVersion = '1.2.3'
  pitestVersion = '1.19.4'
  targetClasses = ['uk.gov.hmcts.reform.bailcaseapi.*']
  excludedClasses = [
    'uk.gov.hmcts.reform.bailcaseapi.infrastructure.config.*',
    'uk.gov.hmcts.reform.bailcaseapi.Application'
  ]
  threads = 10
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  failWhenNoMutations = false
  verbose = true
  mutationThreshold = 85
}


tasks.named('pitest') {
  group = "Verification"
}

sonarqube {
  properties {
    property "sonar.projectName", "IA :: Immigration & Asylum Bail Case API"
    property "sonar.projectKey", "IABAILCASEAPI"
    property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/bailcaseapi/infrastructure/config/**," +
      "src/main/java/uk/gov/hmcts/reform/bailcaseapi/infrastructure/SystemDateProvider.java," +
      "src/main/java/uk/gov/hmcts/reform/bailcaseapi/Application.java"
  }
}

tasks.named('sonarqube') {
  dependsOn test, integration, jacocoTestReport
  group = "Verification"
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

ext["tomcat.version"] = "10.1.55"

dependencyManagement {
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
    mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.3'

    // CVE-2026-34478
    // CVE-2026-34479
    // CVE-2026-34480
    // CVE-2026-34481
    // CVE-2026-34477
    // CVE-2025-68161
    // CVE-2026-41417
    // CVE-2025-55163
    // CVE-2025-58056
    // CVE-2025-58057
    // CVE-2026-33870
    // CVE-2026-33871
    // CVE-2025-67735 - from spring-boot-starter-data-redis@3.5.14
    mavenBom "io.netty:netty-bom:4.2.13.Final"
  }

  dependencies {
    dependencySet(group: 'org.junit.jupiter', version: '5.14.4') {
      entry 'junit-jupiter'
      entry 'junit-jupiter-api'
      entry 'junit-jupiter-engine'
      entry 'junit-jupiter-params'
    }

    dependencySet(group: 'org.junit.platform', version: '1.14.4') {
      entry 'junit-platform-commons'
      entry 'junit-platform-engine'
      entry 'junit-platform-launcher'
    }

    dependency group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'

    dependencySet(group: 'org.mockito', version: '5.23.0') {
      entry 'mockito-core'
      entry 'mockito-junit-jupiter'
    }

    // due to Serenity 5.3.10 forcing commons-lang3@3.18.0
    dependency group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

    // CVE-2026-34478
    // CVE-2026-34479
    // CVE-2026-34480
    // CVE-2026-34481
    // CVE-2026-34477
    // CVE-2025-68161 - from spring-boot-starter-logging@3.5.14
    dependencySet(group: 'org.apache.logging.log4j', version: '2.25.4') {
      entry 'log4j-to-slf4j'
      entry 'log4j-api'
    }

    // CVE-2020-13956 - transitive from service-auth-provider-java-client@5.3.3
    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
  }
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-json'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
  implementation 'org.springframework.boot:spring-boot-starter-cache'
  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
  implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'

  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'

  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'

  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '6.0.0-RELEASE'

  implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
  implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'
  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.4'

  implementation 'com.fasterxml.jackson.core:jackson-core'
  implementation 'com.fasterxml.jackson.core:jackson-annotations'
  implementation 'com.fasterxml.jackson.core:jackson-databind'

  testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'

  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '5.3.10'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '5.3.10'

  testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'

  testImplementation 'org.springframework.security:spring-security-test'
  testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'

  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
    exclude group: 'commons-io', module: 'commons-io'
    exclude group: 'org.apache.commons', module: 'commons-lang3'
  }

  //pact contract testing
  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'spring', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact.provider', name: 'junit5spring', version: '4.6.20'

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

  contractTestRuntimeOnly sourceSets.main.runtimeClasspath
  contractTestRuntimeOnly sourceSets.test.runtimeClasspath
}

tasks.register('runAndPublishConsumerPactTests', Test) {
  logger.lifecycle("Runs pact Tests")
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath

}

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:9292'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = project.pacticipantVersion
  }
}

pactPublish {
  pactPublish = project.pact.publish
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyUpdates.resolutionStrategy = {
  componentSelection { rules ->
    rules.all { ComponentSelection selection ->
      boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
        selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
      }
      if (rejected) {
        selection.reject('Release candidate')
      }
    }
  }
}

static def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

gradle.startParameter.continueOnFailure = true

bootJar {
  archiveFileName = 'ia-bail-case-api.jar'
  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

// this is required to force Java running on the Azure Windows Server OS into using
// UTF-8 as the default character set instead of windows-1252 which causes issues.
// this setting only applies when running via gradle bootRun -- see web.config for the
// java flag that configures the deployed applications
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}
